Commit al master del proyecto web en su version mas reciente

--- a/web/index.html
+++ b/web/index.html
@@ -8,7 +8,14 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1 class="Encabezado">Este es un blogspot</h1>
-    <p class="Contenido">Este es un parrafo que indica el ejemlo de un texto</p>
+    <div id="container">
+        <div id="post">
+            <h2>El titulo de mi comentario</h2>
+            <p>Este en un comentario cualquiera
+            para indicar que es una informacion principal para seguir
+            aprendiendo
+            </p>
+        </div>
+    </div>
 </body>
 </html>
