Estructura incial de la cabecera

--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            cabecera
+        </div>
         <div id="post">
             <h2>El titulo de mi comentario</h2>
             <p>Este en un comentario cualquiera
