Finalizada la cabecera con diseño azul

--- a/web/index.html
+++ b/web/index.html
@@ -10,13 +10,14 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            cabecera
+            Hyperblog
         </div>
         <div id="post">
             <h2>El titulo de mi comentario</h2>
             <p>Este en un comentario cualquiera
             para indicar que es una informacion principal para seguir
-            aprendiendo
+            aprendiendo. En donde platzi siendo la mejor opcion porque 
+            dentro de la comunidad nunca paras de aprender
             </p>
         </div>
     </div>
