Se hacen cambios en estilo y se agrega mas contenido

--- a/web/index.html
+++ b/web/index.html
@@ -15,6 +15,15 @@
             para indicar que es una informacion principal para seguir
             aprendiendo
             </p>
+            <p>
+                Se agrega un parrafo mas para indica que platzi es la mejor platforma 
+                para nunca parar de aprender, y que con las habilidades en git y github 
+                puedo tener un panorama mucho mas elevado.
+            </p>
+            <p>
+                Ademas este es un ejemplo correspondiente a nuetro proposito de aprender el
+                contro de versiones dentro de cualquier proyecto
+            </p>
         </div>
     </div>
 </body>
