Agregue sucripcion, cambie la cabecera maestra y puse todo azul

--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,7 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
+        <span id="tagline">Tu blog maestro</span>
         </div>
         <div id="post">
             <h2>El titulo de mi comentario</h2>
@@ -27,6 +28,9 @@
             <p>
                 Ademas este es un ejemplo correspondiente a nuetro proposito de aprender el
                 contro de versiones dentro de cualquier proyecto
+            </p>
+            <p>
+                Suscribte y dale like
             </p>
         </div>
     </div>
