cambios en el texto

--- a/web/index.html
+++ b/web/index.html
@@ -30,7 +30,7 @@
                 contro de versiones dentro de cualquier proyecto
             </p>
             <p>
-                Suscribte y dale like
+                Suscribete y dale like
             </p>
         </div>
     </div>
