--- a/web/index.html
+++ b/web/index.html
@@ -30,7 +30,7 @@
                 contro de versiones dentro de cualquier proyecto
             </p>
             <p>
-                Suscribete y dale like
+                Suscribete y dale like!! Porque es gratis!!
             </p>
         </div>
     </div>
