Una version mas actualizada del blog

--- a/web/index.html
+++ b/web/index.html
@@ -10,8 +10,8 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Hyperblog 5.0
-            <span id="tagline">Tu blog de cabecera</span>
+            Hyperblog 5.5
+            <span id="tagline">Tu blog de cabecera con alta velocidad</span>
         </div>
         <div id="post">
             <h2>El titulo de mi comentario</h2>
