Color de fondo, logo nuevo y mejor color de header

--- a/web/index.html
+++ b/web/index.html
@@ -10,6 +10,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
+            <img id="logo" src="Imagen/dragon (1).png">
             Hyperblog 5.5
             <span id="tagline">Tu blog de cabecera con alta velocidad</span>
         </div>
