--- a/web/index.html
+++ b/web/index.html
@@ -33,6 +33,9 @@
                 Suscribete y dale like
             </p>
         </div>
+        <div id="footer">
+            Hecho con amor en Platzi <3
+        </div>
     </div>
 </body>
 </html>
