--- a/web/index.html
+++ b/web/index.html
@@ -34,7 +34,7 @@
             </p>
         </div>
         <div id="footer">
-            Hecho con amor en Platzi <3
+            <3 Hecho con amor en Platzi <3
         </div>
     </div>
 </body>
