Se arregla errores ortograficos

--- a/web/index.html
+++ b/web/index.html
@@ -28,7 +28,7 @@
             </p>
             <p>
                 Ademas este es un ejemplo correspondiente a nuetro proposito de aprender el
-                contro de versiones dentro de cualquier proyecto
+                control de versiones dentro de cualquier proyecto.
             </p>
             <p>
                 Suscribete y dale like!! Porque es gratis!!
