--- a/web/index.html
+++ b/web/index.html
@@ -15,20 +15,19 @@
             <span id="tagline">Tu blog de cabecera con alta velocidad</span>
         </div>
         <div id="post">
-            <h2>El titulo de mi comentario</h2>
+            <h2>Publicacion 1</h2>
             <p>Este en un comentario cualquiera
-            para indicar que es una informacion principal para seguir
-            aprendiendo. En donde platzi siendo la mejor opcion porque 
-            dentro de la comunidad nunca paras de aprender
+            para indicar que la informacion principal para seguir
+            aprendiendo y usando nuevas plataformas de aprendizaje como platzi en donde siendo la mejor opcion porque 
+            dentro de la comunidad nunca paras de aprender.
             </p>
             <p>
-                Se agrega un parrafo mas para indica que platzi es la mejor platforma 
-                para nunca parar de aprender, y que con las habilidades en git y github 
-                puedo tener un panorama mucho mas elevado.
+                En este momento estamos aprendiendo sobre Git-Hub y sus mejores practicas, donde he aprendido demasiado y me sorprende 
+                todos los dias aprender algo que nunca lo hubiera imaginado.
             </p>
             <p>
-                Ademas este es un ejemplo correspondiente a nuetro proposito de aprender el
-                control de versiones dentro de cualquier proyecto.
+                Ahora que conozco un como usar Git me gustaria repetir muchos proyectos en donde hice modificaciones pero perdi los cambios anteriores
+                por no saber de esta tecnologia que es relevante y necesaria en el mundo tech
             </p>
             <p>
                 Suscribete y dale like!! Porque es gratis!!
