Se hace un cambio al texto y la pagina

--- a/web/index.html
+++ b/web/index.html
@@ -19,7 +19,8 @@
             <p>Este en un comentario cualquiera
             para indicar que la informacion principal para seguir
             aprendiendo y usando nuevas plataformas de aprendizaje como platzi en donde siendo la mejor opcion porque 
-            dentro de la comunidad nunca paras de aprender.
+            dentro de la comunidad nunca paras de aprender. Ademas es mucho mejor que estar mirando videos en youtube de manera reciclada
+            aunque unos son muy buenos pero otros dejan mucho que desear.
             </p>
             <p>
                 En este momento estamos aprendiendo sobre Git-Hub y sus mejores practicas, donde he aprendido demasiado y me sorprende 
@@ -27,7 +28,7 @@
             </p>
             <p>
                 Ahora que conozco un como usar Git me gustaria repetir muchos proyectos en donde hice modificaciones pero perdi los cambios anteriores
-                por no saber de esta tecnologia que es relevante y necesaria en el mundo tech
+                por no saber de esta tecnologia que es relevante y necesaria en el mundo tech. 
             </p>
             <p>
                 Suscribete y dale like!! Porque es gratis!!
