Se hacen cambios minimos

--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@
     <div id="container">
         <div id="cabecera">
             <img id="logo" src="Imagen/dragon (1).png">
-            Hyperblog 5.5
+            Hyperblog 6
             <span id="tagline">Tu blog de cabecera con alta velocidad</span>
         </div>
         <div id="post">
@@ -28,7 +28,7 @@
             </p>
             <p>
                 Ahora que conozco un como usar Git me gustaria repetir muchos proyectos en donde hice modificaciones pero perdi los cambios anteriores
-                por no saber de esta tecnologia que es relevante y necesaria en el mundo tech. 
+                por no saber de esta tecnologia que es relevante y necesaria en el mundo de la tecnologia.
             </p>
             <p>
                 Suscribete y dale like!! Porque es gratis!!
