Se hace un cambio mas al texto del blog

--- a/web/index.html
+++ b/web/index.html
@@ -24,7 +24,8 @@
             </p>
             <p>
                 En este momento estamos aprendiendo sobre Git-Hub y sus mejores practicas, donde he aprendido demasiado y me sorprende 
-                todos los dias aprender algo que nunca lo hubiera imaginado.
+                todos los dias aprender algo que nunca lo hubiera imaginado. Ojala este tipo de actividades y cursos tengan su renumeracion
+                en la cuestion personal y economica.
             </p>
             <p>
                 Ahora que conozco un como usar Git me gustaria repetir muchos proyectos en donde hice modificaciones pero perdi los cambios anteriores
