Se hace un cambio minimos

--- a/web/index.html
+++ b/web/index.html
@@ -32,7 +32,7 @@
                 por no saber de esta tecnologia que es relevante y necesaria en el mundo de la tecnologia.
             </p>
             <p>
-                Suscribete y dale like!! Porque es gratis!!
+                Suscribete y dale like!!
             </p>
         </div>
         <div id="footer">
