agregue una imagen al blog

--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,7 @@
                 Ahora que conozco un como usar Git me gustaria repetir muchos proyectos en donde hice modificaciones pero perdi los cambios anteriores
                 por no saber de esta tecnologia que es relevante y necesaria en el mundo de la tecnologia.
             </p>
+            <p><img src="./Imagen/descarga.jpg" width="100%" height="30%"></p>
             <p>
                 Suscribete y dale like!!
             </p>
